--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "require": {
         "php": "^8.0.2",
         "barryvdh/laravel-ide-helper": "^2.12",
+        "darkaonline/l5-swagger": "^8.4",
+        "friendsofphp/php-cs-fixer": "^3.13",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "nunomaduro/larastan": "^2.3"
+        "nunomaduro/larastan": "^2.3",
+        "nunomaduro/phpinsights": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
