--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpstan": [
+            "./vendor/bin/phpstan analyse"
+        ],
+        "cs-fixer": [
+            "./vendor/bin/php-cs-fixer fix"
         ]
     },
     "extra": {
