--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "nunomaduro/larastan": "^2.3",
-        "nunomaduro/phpinsights": "^2.6"
+        "nunomaduro/phpinsights": "^2.6",
+        "spatie/db-dumper": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
